# server_client_sse_sample

./: .gitignore  README.md
api/: README.MD
cli/: Cargo.toml
cli/src/: args.rs  main.rs
scraper/src/: main.py
scraper_server/: requirements.txt
scraper_server/src/: main.py
server/: Cargo.toml
server/src/: broadcast.rs  main.rs
