[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
futures-util = "0.3.29"
log = "0.4.21"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.1"
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking"]}
eventsource-client = "0.12.2"
futures = "0.3.30"
